<resources>
    <string name="app_name">Inventory App</string>
    <string name="dummy_datta">Example Product</string>
    <string name="quantity_view">Quantity</string>
    <string name="category_about">about</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_price">Product Price</string>
    <string name="quantity">Quantity</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_number">Supplier Phone Number</string>
    <string name="supplier_information">Supplier Information</string>
    <string name="number_in_stock">Number in Stock</string>
    <string name="editor_activity_title_new_product">New Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="toast_fail">Fail</string>
    <string name="toast_success">Sale Success</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Unsaved Changes</string>
    <string name="discard">discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_hint_name">Product Name</string>
    <string name="editor_price_text_view">Price</string>
    <string name="editor_hint_price">$</string>
    <string name="editor_quantity_text_view">Quantity</string>
    <string name="editor_hint_supplierPhone">Supplier Phone Number</string>
    <string name="editor_hint_supplierName">Supplier Name</string>
    <string name="editor_save_failed">Failed</string>
    <string name="editor_save_success">Edit Successful</string>
    <string name="list_view_sale_button">Sale</string>
    <string name="editor_delete_success">Delete Success</string>
    <string name="editor_delete_failed">Delete Failed</string>
    <string name="editor_no">No</string>
    <string name="editor_yes">Yes</string>
    <string name="editor_ask_to_save">Do you want to save?</string>
    <string name="editor_button_delete">Delete</string>
    <string name="editor_button_save">Save</string>
    <string name="editor_label_adding">New Product</string>
    <string name="editor_label">Edit Product</string>
    <string name="editor_ask_to_delete">You want to delete this?</string>
    <string name="nothing_to_display">Nothing to display,\n try adding a new product</string>
    <string name="toast_nothing">Nothing left to sell</string>
    <string name="adapter_quantity">Quantity:" "</string>
    <string name="delete_db">Delete Database</string>
</resources>
